<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="306dp"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/review_image_cap"
                android:layout_width="162dp"
                android:layout_height="30dp"
                android:text="@string/review_image_cap"
                android:textColor="@color/primary"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/confirm_fields"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/verify_photo"
                    android:textColor="#333333"
                    android:textSize="36sp" />

            </TableRow>


            <ImageView
                android:id="@+id/imageviewFacialCheck"
                android:layout_width="400dp"
                android:layout_height="480dp"
                android:layout_marginLeft="-48dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/facial_recognition_result"
                tools:srcCompat="@tools:sample/avatars" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/retake_facial_capture"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border"
                    android:minHeight="45dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/retake_facial_capture"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="26dp"
                    android:layout_height="50dp" />

                <Button
                    android:id="@+id/confirm_facial_capture"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border"
                    android:minHeight="45dp"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:text="@string/confirm_facial_capture"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />
            </TableRow>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>