<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:clickable="false"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/outerFrameOnboarding"
        android:layout_width="336dp"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/innerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp" />

            <TableRow
                android:layout_width="355dp"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="337dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo" />

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcomeTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/welcome"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/welcomeNameTextField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:text="@string/user"
                    android:textAlignment="center"
                    android:textColor="@color/primary"
                    android:textSize="18sp" />

            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <Button
                    android:id="@+id/batchModeButton"
                    android:layout_width="153dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/button_border"
                    android:minHeight="120dp"
                    android:text="@string/batch_mode"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/addSingleButton"
                    android:layout_width="153dp"
                    android:layout_height="150dp"
                    android:background="@drawable/button_border"
                    android:text="@string/add_single"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />
            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <Button
                    android:id="@+id/matchUserButton"
                    android:layout_width="153dp"
                    android:layout_height="150dp"
                    android:background="@drawable/button_border"
                    android:text="@string/match_user"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

                <Space
                    android:layout_width="30dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/clearData"
                    android:layout_width="153dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="-10dp"
                    android:background="@drawable/button_border"
                    android:text="@string/clear_data"
                    android:textColor="@color/primary_text"
                    android:textSize="18sp" />

            </TableRow>

        </LinearLayout>

    </FrameLayout>
</LinearLayout>